qpar-common/src/main/java/qpar/common/parser/Qbf_parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Qbf_parser.java */
package qpar.common.parser;

import java.io.Serializable;
import java.util.HashMap;
import java.util.Vector;

import qpar.common.parser.Node.NodeType;

public class Qbf_parser implements /* @bgen(jjtree) */Qbf_parserTreeConstants, Serializable, Qbf_parserConstants {/*
																													 * @
																													 * bgen
																													 * (
																													 * jjtree
																													 * )
																													 */
	protected JJTQbf_parserState jjtree = new JJTQbf_parserState();
	private final Vector<Integer> eVars = new Vector<Integer>();
	private final Vector<Integer> aVars = new Vector<Integer>();
	private final Vector<Integer> vars = new Vector<Integer>();
	private final Vector<SimpleNode> nodesToExpand = new Vector<SimpleNode>();
	private final HashMap<Integer, Integer> literalCount = new HashMap<Integer, Integer>();
	private final HashMap<String, Integer> varNames = new HashMap<String, Integer>();
	// private int nextVarInt = 2;
	private int nextVarInt = 1;
	private SimpleNode root;

	public Qbf_parser() {
		this.jjtree.reset();
	}

	public HashMap<Integer, Integer> getLiteralCount() {
		return this.literalCount;
	}

	public Vector<Integer> getEVars() {
		return this.eVars;
	}

	public Vector<Integer> getAVars() {
		return this.aVars;
	}

	public Vector<Integer> getVars() {
		return this.vars;
	}

	public SimpleNode getRootNode() {
		return (SimpleNode) this.jjtree.rootNode();
	}

	// this expands quantifier nodes with more than one variable, e.g.:
	//
	// forall [v1 v2 v3] ... (in boole format)
	//
	// so that instead of one single FORALL node containing v1, v2, v3
	// we have three connected nodes for them in our tree representation
	// of the formula.
	//
	// this may be changed or left empty for other input formats.
	public void doPostprocessing() {

		for (SimpleNode n : this.nodesToExpand) {

			SimpleNode currentParent = n;
			// save the node that we need to connect at the end
			SimpleNode lastChild = (SimpleNode) n.jjtGetChild(0);
			n.deleteChildren();

			for (int var : n.getVarList()) {
				SimpleNode currentChild = new SimpleNode();
				currentChild.setNodeType(n.getNodeType());
				currentChild.setVar(var);

				currentParent.jjtAddChild(currentChild, 0);
				currentChild.jjtSetParent(currentParent);

				currentParent = currentChild;
			}

			currentParent.jjtAddChild(lastChild, 0);
			lastChild.jjtSetParent(currentParent);

			n.setVarList(null);
		}
	}

	// non-terminals
	// * <input> ::= <exp> EOF
	final public void Input() throws ParseException {
		/* @bgen(jjtree) Input */
		ASTInput jjtn000 = new ASTInput(JJTINPUT);
		boolean jjtc000 = true;
		this.jjtree.openNodeScope(jjtn000);
		try {
			jjtn000.nodeType = NodeType.START;
			this.Exp();
			this.jj_consume_token(0);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				this.jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				this.jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true) {
						throw (RuntimeException) jjte000;
					}
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true) {
						throw (ParseException) jjte000;
					}
				}
			}
			{
				if (true) {
					throw (Error) jjte000;
				}
			}
		} finally {
			if (jjtc000) {
				this.jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void And() throws ParseException {
		/* @bgen(jjtree) And */
		ASTAnd jjtn000 = new ASTAnd(JJTAND);
		boolean jjtc000 = true;
		this.jjtree.openNodeScope(jjtn000);
		try {
			this.jj_consume_token(AND);
		} finally {
			if (jjtc000) {
				this.jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void Or() throws ParseException {
		/* @bgen(jjtree) Or */
		ASTOr jjtn000 = new ASTOr(JJTOR);
		boolean jjtc000 = true;
		this.jjtree.openNodeScope(jjtn000);
		try {
			this.jj_consume_token(OR);
		} finally {
			if (jjtc000) {
				this.jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void Not() throws ParseException {
		this.jj_consume_token(NOT);
	}

	final public void Exists() throws ParseException {
		this.jj_consume_token(EXISTS);
	}

	final public void Forall() throws ParseException {
		this.jj_consume_token(FORALL);
	}

	final public void Var() throws ParseException {
		/* @bgen(jjtree) Var */
		ASTVar jjtn000 = new ASTVar(JJTVAR);
		boolean jjtc000 = true;
		this.jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			t = this.jj_consume_token(VAR);
			this.jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			int varNumber = 0;

			if (this.varNames.containsKey(t.image)) {
				jjtn000.var = this.varNames.get(t.image);
			} else {
				this.varNames.put(t.image, this.nextVarInt);
				jjtn000.var = this.nextVarInt;
				this.nextVarInt++;
			}

			jjtn000.nodeType = NodeType.VAR;
			varNumber = jjtn000.var;

			if (this.literalCount.get(varNumber) != null) {
				this.literalCount.put(varNumber, this.literalCount.get(varNumber) + 1);
			} else {
				this.literalCount.put(varNumber, 1);
			}
			if (!this.vars.contains(varNumber)) {
				this.vars.add(varNumber);
			}
		} finally {
			if (jjtc000) {
				this.jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public Vector VarList(final Vector varList, final String s) throws ParseException {
		Token t;
		t = this.jj_consume_token(VAR);
		if (!this.varNames.containsKey(t.image)) {
			this.varNames.put(t.image, this.nextVarInt);
			this.nextVarInt++;
		}

		if (s == "e") {
			if (!this.vars.contains(this.varNames.get(t.image))) {
				this.eVars.add(this.varNames.get(t.image));
			}
		}

		if (s == "f") {
			if (!this.vars.contains(this.varNames.get(t.image))) {
				this.aVars.add(this.varNames.get(t.image));
			}
		}

		varList.add(this.varNames.get(t.image));
		switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
		case VAR:
			this.VarList(varList, s);
			break;
		default:
			this.jj_la1[0] = this.jj_gen;
			;
		}
		{
			if (true) {
				return varList;
			}
		}
		throw new Error("Missing return statement in function");
	}

	// * <exp> ::= <NOT> <exp> | <q_set> <exp> | <LP> <exp> <op> <exp> <RP>
	// * | <LP> <exp> <RP> | <VAR>
	final public void Exp() throws ParseException {
		String s = "";
		String op = "";
		Vector<Integer> varList;
		Token t;
		switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
		case NOT:
			ASTLogical jjtn001 = new ASTLogical(JJTLOGICAL);
			boolean jjtc001 = true;
			this.jjtree.openNodeScope(jjtn001);
			try {
				this.Not();
				jjtn001.nodeType = NodeType.NOT;
				this.Exp();
			} catch (Throwable jjte001) {
				if (jjtc001) {
					this.jjtree.clearNodeScope(jjtn001);
					jjtc001 = false;
				} else {
					this.jjtree.popNode();
				}
				if (jjte001 instanceof RuntimeException) {
					{
						if (true) {
							throw (RuntimeException) jjte001;
						}
					}
				}
				if (jjte001 instanceof ParseException) {
					{
						if (true) {
							throw (ParseException) jjte001;
						}
					}
				}
				{
					if (true) {
						throw (Error) jjte001;
					}
				}
			} finally {
				if (jjtc001) {
					this.jjtree.closeNodeScope(jjtn001, 1);
				}
			}
			break;
		case EXISTS:
		case FORALL:
			ASTQuantifier jjtn002 = new ASTQuantifier(JJTQUANTIFIER);
			boolean jjtc002 = true;
			this.jjtree.openNodeScope(jjtn002);
			try {
				s = this.Quant();
				this.jj_consume_token(LSP);
				varList = new Vector<Integer>();
				varList = this.VarList(varList, s);
				jjtn002.var = varList.get(0);
				varList.remove(0);

				if (varList.size() > 0) {
					jjtn002.setVarList(varList);
					this.nodesToExpand.add(jjtn002);
				}

				if (s == "e") {
					jjtn002.nodeType = NodeType.EXISTS;
				}
				if (s == "f") {
					jjtn002.nodeType = NodeType.FORALL;
				}
				this.jj_consume_token(RSP);
				this.Exp();
			} catch (Throwable jjte002) {
				if (jjtc002) {
					this.jjtree.clearNodeScope(jjtn002);
					jjtc002 = false;
				} else {
					this.jjtree.popNode();
				}
				if (jjte002 instanceof RuntimeException) {
					{
						if (true) {
							throw (RuntimeException) jjte002;
						}
					}
				}
				if (jjte002 instanceof ParseException) {
					{
						if (true) {
							throw (ParseException) jjte002;
						}
					}
				}
				{
					if (true) {
						throw (Error) jjte002;
					}
				}
			} finally {
				if (jjtc002) {
					this.jjtree.closeNodeScope(jjtn002, 1);
				}
			}
			break;
		case LP:
			this.jj_consume_token(LP);
			ASTLogical jjtn003 = new ASTLogical(JJTLOGICAL);
			boolean jjtc003 = true;
			this.jjtree.openNodeScope(jjtn003);
			try {
				this.Exp();
				switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
				case AND:
				case OR:
					switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
					case OR:
						this.jj_consume_token(OR);
						jjtn003.nodeType = NodeType.OR;
						break;
					case AND:
						this.jj_consume_token(AND);
						jjtn003.nodeType = NodeType.AND;
						break;
					default:
						this.jj_la1[1] = this.jj_gen;
						this.jj_consume_token(-1);
						throw new ParseException();
					}
					this.Exp();
					break;
				default:
					this.jj_la1[2] = this.jj_gen;
					;
				}
			} catch (Throwable jjte003) {
				if (jjtc003) {
					this.jjtree.clearNodeScope(jjtn003);
					jjtc003 = false;
				} else {
					this.jjtree.popNode();
				}
				if (jjte003 instanceof RuntimeException) {
					{
						if (true) {
							throw (RuntimeException) jjte003;
						}
					}
				}
				if (jjte003 instanceof ParseException) {
					{
						if (true) {
							throw (ParseException) jjte003;
						}
					}
				}
				{
					if (true) {
						throw (Error) jjte003;
					}
				}
			} finally {
				if (jjtc003) {
					this.jjtree.closeNodeScope(jjtn003, this.jjtree.nodeArity() > 1);
				}
			}
			this.jj_consume_token(RP);
			break;
		case VAR:
			this.Var();
			break;
		default:
			this.jj_la1[3] = this.jj_gen;
			this.jj_consume_token(-1);
			throw new ParseException();
		}
	}

	// * <quant> ::= <EXISTS> | <FORALL>
	final public String Quant() throws ParseException {
		switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
		case EXISTS:
			this.Exists();
			{
				if (true) {
					return "e";
				}
			}
			break;
		case FORALL:
			this.Forall();
			{
				if (true) {
					return "f";
				}
			}
			break;
		default:
			this.jj_la1[4] = this.jj_gen;
			this.jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	// * <op> ::= <OR> | <AND>
	final public void Op() throws ParseException {
		switch ((this.jj_ntk == -1) ? this.jj_ntk() : this.jj_ntk) {
		case OR:
			this.Or();
			break;
		case AND:
			this.And();
			break;
		default:
			this.jj_la1[5] = this.jj_gen;
			this.jj_consume_token(-1);
			throw new ParseException();
		}
	}

	/** Generated Token Manager. */
	public Qbf_parserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	/** Current token. */
	public Token token;
	/** Next token. */
	public Token jj_nt;
	private int jj_ntk;
	private int jj_gen;
	final private int[] jj_la1 = new int[6];
	static private int[] jj_la1_0;
	static {
		jj_la1_init_0();
	}

	private static void jj_la1_init_0() {
		jj_la1_0 = new int[] { 0x8000, 0xc0, 0xc0, 0xe300, 0x6000, 0xc0, };
	}

	/** Constructor with InputStream. */
	public Qbf_parser(final java.io.InputStream stream) {
		this(stream, null);
	}

	/** Constructor with InputStream and supplied encoding */
	public Qbf_parser(final java.io.InputStream stream, final String encoding) {
		try {
			this.jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		this.token_source = new Qbf_parserTokenManager(this.jj_input_stream);
		this.token = new Token();
		this.jj_ntk = -1;
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	/** Reinitialise. */
	public void ReInit(final java.io.InputStream stream) {
		this.ReInit(stream, null);
	}

	/** Reinitialise. */
	public void ReInit(final java.io.InputStream stream, final String encoding) {
		try {
			this.jj_input_stream.ReInit(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		this.token_source.ReInit(this.jj_input_stream);
		this.token = new Token();
		this.jj_ntk = -1;
		this.jjtree.reset();
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	/** Constructor. */
	public Qbf_parser(final java.io.Reader stream) {
		this.jj_input_stream = new SimpleCharStream(stream, 1, 1);
		this.token_source = new Qbf_parserTokenManager(this.jj_input_stream);
		this.token = new Token();
		this.jj_ntk = -1;
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	/** Reinitialise. */
	public void ReInit(final java.io.Reader stream) {
		this.jj_input_stream.ReInit(stream, 1, 1);
		this.token_source.ReInit(this.jj_input_stream);
		this.token = new Token();
		this.jj_ntk = -1;
		this.jjtree.reset();
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	/** Constructor with generated Token Manager. */
	public Qbf_parser(final Qbf_parserTokenManager tm) {
		this.token_source = tm;
		this.token = new Token();
		this.jj_ntk = -1;
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	/** Reinitialise. */
	public void ReInit(final Qbf_parserTokenManager tm) {
		this.token_source = tm;
		this.token = new Token();
		this.jj_ntk = -1;
		this.jjtree.reset();
		this.jj_gen = 0;
		for (int i = 0; i < 6; i++) {
			this.jj_la1[i] = -1;
		}
	}

	private Token jj_consume_token(final int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = this.token).next != null) {
			this.token = this.token.next;
		} else {
			this.token = this.token.next = this.token_source.getNextToken();
		}
		this.jj_ntk = -1;
		if (this.token.kind == kind) {
			this.jj_gen++;
			return this.token;
		}
		this.token = oldToken;
		this.jj_kind = kind;
		throw this.generateParseException();
	}

	/** Get the next Token. */
	final public Token getNextToken() {
		if (this.token.next != null) {
			this.token = this.token.next;
		} else {
			this.token = this.token.next = this.token_source.getNextToken();
		}
		this.jj_ntk = -1;
		this.jj_gen++;
		return this.token;
	}

	/** Get the specific Token. */
	final public Token getToken(final int index) {
		Token t = this.token;
		for (int i = 0; i < index; i++) {
			if (t.next != null) {
				t = t.next;
			} else {
				t = t.next = this.token_source.getNextToken();
			}
		}
		return t;
	}

	private int jj_ntk() {
		if ((this.jj_nt = this.token.next) == null) {
			return (this.jj_ntk = (this.token.next = this.token_source.getNextToken()).kind);
		} else {
			return (this.jj_ntk = this.jj_nt.kind);
		}
	}

	private final java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
	private int[] jj_expentry;
	private int jj_kind = -1;

	/** Generate ParseException. */
	public ParseException generateParseException() {
		this.jj_expentries.clear();
		boolean[] la1tokens = new boolean[16];
		if (this.jj_kind >= 0) {
			la1tokens[this.jj_kind] = true;
			this.jj_kind = -1;
		}
		for (int i = 0; i < 6; i++) {
			if (this.jj_la1[i] == this.jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 16; i++) {
			if (la1tokens[i]) {
				this.jj_expentry = new int[1];
				this.jj_expentry[0] = i;
				this.jj_expentries.add(this.jj_expentry);
			}
		}
		int[][] exptokseq = new int[this.jj_expentries.size()][];
		for (int i = 0; i < this.jj_expentries.size(); i++) {
			exptokseq[i] = this.jj_expentries.get(i);
		}
		return new ParseException(this.token, exptokseq, tokenImage);
	}

	/** Enable tracing. */
	final public void enable_tracing() {
	}

	/** Disable tracing. */
	final public void disable_tracing() {
	}

}
